fix: prevent breadcrumb cut off by removing negative margin from body in custom.css

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -612,11 +612,6 @@ ul.circle>li:before {
   }
 }
 
-
-body {
-  margin-top: -30px !important;
-}
-
 .tag-wrapper {
   display: flex;
   align-items: center;
